@@ -25,6 +25,7 @@ public class AppointmentDb {
         throw new IllegalStateException("Utility class");
     }
     static {
+        appointments.add(new Appointment(1,ClientDB.clients.get(0),EmployeeDB.employees.get(0), EmployeeDB.employees.get(0).getRoom(),"01/04/2012","8:00",true));
         appointments.add(new Appointment(1,ClientDB.clients.get(0),EmployeeDB.employees.get(0), EmployeeDB.employees.get(0).getRoom(),"01/03/2012","10:00",true));
         appointments.add(new Appointment(2,ClientDB.clients.get(1),EmployeeDB.employees.get(1), EmployeeDB.employees.get(1).getRoom(),"01/09/2012","10:00",true));
         appointments.add(new Appointment(3,ClientDB.clients.get(2),EmployeeDB.employees.get(2), EmployeeDB.employees.get(2).getRoom(),"02/09/2012","09:00",true));
@@ -35,11 +36,11 @@ public class AppointmentDb {
         EmployeeDB.employees.get(3).setAppointment(appointments.get(3));
     }
     public static int addAppointment(int id,Client client, String date, String time, Employee employee){
-        id = appointments.getLast().getAppointmentID() + 1;
+        id = appointments.get(appointments.size()-1).getAppointmentID() + 1;
         if(!isValidDate(date)) return 2;
         if(!isValidTime(time)) return 1;
         appointments.add(new Appointment(id,client,employee,employee.getRoom(),date,time,true));
-        employee.setAppointment(appointments.getLast());
+        employee.setAppointment(appointments.get(appointments.size()-1));
         return 0;
     }
     public static List<Appointment> getAllAppointments(){
